@@ -1,0 +1,21 @@
+<?php
+
+/*
+ * This file is part of the TYPO3 CMS project.
+ *
+ * It is free software; you can redistribute it and/or modify it under
+ * the terms of the GNU General Public License, either version 2
+ * of the License, or any later version.
+ *
+ * For the full copyright and license information, please read the
+ * LICENSE.txt file that was distributed with this source code.
+ *
+ * The TYPO3 project - inspiring people to share!
+ */
+
+/**
+ * This class is just used to be able to unserialize the objects stored in old Scheduler tasks.
+ */
+class tx_externalimport_autosync_scheduler_Task extends \Cobweb\ExternalImport\Task\AutomatedSyncTask
+{
+}
