@@ -36,6 +36,17 @@ The "excludedOperations" column configuration, which was deprecated since
 version 2.0.0, was entirely removed. The same goes for the "mappings.uid_foreign"
 configuration.
 
+More importantly the Scheduler task was renamed from :code:`tx_externalimport_autosync_scheduler_Task`
+to :code:`\Cobweb\ExternalImport\Task\AutomatedSyncTask`. As such, existing
+Scheduler tasks need to be updated. An upgrade wizard is provided in the
+Install Tool. It will automatically migrate existing old tasks.
+
+.. figure:: ../Images/UpdateWizard.png
+	:alt: The update wizard shows that there are tasks to update
+
+If there are no tasks to migrate, the External Import wizard will simply not show up.
+Otherwise just click on the "Execute" button and follow the instructions.
+
 
 .. _installation-upgrade-200:
 
